# rust_logging_tool_RustAfricaHackathon

./: README.md  architecture.drawio  documentation
dal-layer/: Cargo.toml
dal-layer/src/models/: details.rs  log_model.rs  my_service_model.rs  response_model.rs
dal-layer/src/repository/: config.rs  db.rs
rust-log-collector/: .env  config.json
rust-log-collector/src/: lib.rs  main.rs
rust-tooling-api/: Cargo.toml
rust-tooling-api/src/: main.rs
rust-tooling-api/src/routes/: health_check.rs  log_routes.rs  myservice_routes.rs
