[package]
name = "dal-layer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
futures = "0.3" 
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mongodb = "3.4.1"
serde = { version = "1.0.228", features = ["derive"] } 
utoipa = {version = "5.4.0",features = ["actix_extras","chrono"]}
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"]}
utoipa-redoc = { version = "6.0.0", features =  ["actix-web"]}
utoipa-swagger-ui = { version = "9.0.2", features =  ["actix-web"]}
serde_json = "1.0.149"